--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -44,7 +44,7 @@ nav {
 .landing {
 	height: 600px;
 	position: relative;
-	background-image: url("/imgs/nicolas-peyrol-6a3h6zMvBc4-unsplash.jpg");
+	background-image: url("/imgs/alec-jones-WDsmqzxy8Ig-unsplash.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -75,7 +75,7 @@ nav {
 .landing-community-left {
 	height: 350px;
 	width: 300px;
-	background-image: url("/imgs/william-chiesurin-EbGnBRyFAwc-unsplash.jpg");
+	background-image: url("/imgs/adrian-n-jWM41o-TMAw-unsplash.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -92,14 +92,14 @@ nav {
 .landing-become-member-right {
 	height: 350px;
 	width: 400px;
-	background-image: url("/imgs/kenny-gaines-brW66P_4syk-unsplash.jpg");
+	background-image: url("/imgs/yannis-zaugg-EXiVB3I2sWs-unsplash.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 }
 .userdash-landing {
 	height: 600px;
-	background-image: url("/imgs/jannis-lucas-jBmNhftLcrY-unsplash.jpg");
+	background-image: url("/imgs/andreas-brun-fjDDh6iOBQA-unsplash.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -157,7 +157,7 @@ nav {
 	margin-top: 2rem;
 }
 .events-landing {
-	background-image: url("/imgs/spencer-davis-2y0xAc1SV5g-unsplash.jpg");
+	background-image: url("/imgs/yannis-zaugg-EXiVB3I2sWs-unsplash.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -165,14 +165,79 @@ nav {
 	position: relative;
 }
 .events-landing-shadow {
-	z-index: 0;
+	z-index: 1;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0,0,0,0.5);
 	position: absolute;
-	clip-path: polygon(100% 63%, 30% 100%, 100% 100%);
+	clip-path: polygon(100% 60%, 30% 100%, 100% 100%);
+}
+.events-container {
+	position: absolute;
+	width: 100%;
+	z-index: 3;
+	min-height: 600px;
 }
 .events-landing-text {
 	z-index: 10;
 	color: #ffffff;
+}
+.event-list {
+}
+.event-list-item-title {
+	font-weight: bold;
+}
+.event-list-item-date {
+	color: green;
+	font-weight: bold;
+}
+.event-list-item-description {
+	font-size: 1rem;
+}
+.event-list-container {
+	position: relative;
+}
+.event-list-item:not(:last-child) {
+	margin-bottom: 2rem;
+}
+.event-list-line {
+	position: absolute;
+	width: 2px;
+	height: 130%;
+	background-color: #000000;
+}
+.event-list-line-bottom {
+	position: absolute;
+	width: 2px;
+	height: 100px;
+	background-color: #000000;
+	transform: translateY(-60px);
+}
+.event-list-item-marker {
+	height: 10px;
+	width: 10px;
+	background-color: #000000;
+}
+.event-meet-preview {
+	background-color: #000000;
+	color: #ffffff;
+	z-index: 10;
+}
+.event-meet-preview-right {
+	background-image: url("/imgs/paul-kansonkho-ivRiPM_kHw0-unsplash.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	min-height: 250px;
+	width: 100%;
+}
+.SingleEventTable {
+	background: blue;
+	border-spacing: 50px 0;
+}
+.titleSquare {
+	height: 26px;
+	width: 26px;
+	background-color: #000000;
+	transform: translateY(10px);
 }
